fix broken CSS property

--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -35,7 +35,7 @@ fieldset{
         }
         & > input:checked {
             border-width: 0.25em;
-            transform: border-width 0.1s linear;
+            transition: border-width 0.1s linear;
         }
     }
 }
